--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
     <script src="../source/platform.js" type="text/javascript"></script>
     <script src="../source/hello.js" type="text/javascript"></script>
     <script src="../source/responder.js" type="text/javascript"></script>
+    <script src="../source/intruder.js" type="text/javascript"></script>
     <script src="sample_application.js" type="text/javascript"></script>
     
     <script src="tests.js" type="text/javascript"></script>
