--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     
     <script src="../source/platform.js" type="text/javascript"></script>
+    <script src="../source/events.js" type="text/javascript"></script>
     <script src="../source/hello.js" type="text/javascript"></script>
     <script src="../source/responder.js" type="text/javascript"></script>
     <script src="../source/intruder.js" type="text/javascript"></script>
