--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
 
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     
+    <script src="../vendor/debug.js" type="text/javascript"></script>
     <script src="../source/platform.js" type="text/javascript"></script>
     <script src="../source/events.js" type="text/javascript"></script>
     <script src="../source/hello.js" type="text/javascript"></script>
